[package]
name = "quic"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[dependencies]
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
arrayref = "0.3"
bytes = "0.4"
byteorder = "1"
bitflags = "1.0"
extprim = "1.4"
extprim_literals = "2.0"
nom = "3.2"
num = "0.1"
num-derive= "0.1"
time = "0.1"
ring = { git = "https://github.com/flier/ring.git", branch = "with_auth_tag_len" }

clippy = { version = "*", optional = true }

[dev-dependencies]
pretty_env_logger = "0.1"
matches = "0.1"
hex = "0.3"